--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -38,33 +38,44 @@
 
     <!-- TODO #4 - Loop over the search results to display all job fields. -->
 
-    <table class="job-listing" th:each="job:${jobs}">
-        <tr>
-            <th>ID</th>
-            <td th:text="${job.id}"></td>
-        </tr>
-        <tr>
-            <th>Name</th>
-            <td th:text="${job.name}"></td>
-        </tr>
-        <tr>
-            <th>Employer</th>
-            <td th:text="${job.employer}"></td>
-        </tr>
-        <tr>
-            <th>Location</th>
-            <td th:text="${job.location}"></td>
-        </tr>
-        <tr>
-            <th>Position Type</th>
-            <td th:text="${job.positionType}"></td>
-        </tr>
-        <tr>
-            <th>Skill</th>
-            <td th:text="${job.coreCompetency}"></td>
-        </tr>
+    <th:block th:each="job : ${jobs}">
+        <table class="job-listing">
+            <tr>
+                <th >ID:</th>
+                <th th:text="${job.getId()}" style="font-size:x-small"></th>
+            </tr>
+            <tr>
+                <th>NAME:</th>
+                <th th:text="${job.getName()}" style="font-size:x-small"></th>
+            </tr>
+            <tr>
+                <th>EMPLOYER:</th>
+                <th>
+                    <a th:href="@{/list/jobs(column=employer,value=${job.getEmployer()})}" th:text="${job.getEmployer()}" style="font-size:x-small" align="left"></a>
+                </th>
+            </tr>
+            <tr>
+                <th>LOCATION:</th>
+                <th>
+                    <a th:href="@{/list/jobs(column=location,value=${job.getLocation()})}" th:text="${job.getLocation()}" style="font-size:x-small" align="left"></a>
+                </th>
+            </tr>
+            <tr>
+                <th>POSITION TYPE:</th>
+                <th>
+                    <a th:href="@{/list/jobs(column=positionType,value=${job.getPositionType()})}" th:text="${job.getPositionType()}" style="font-size:x-small" align="left"></a>
+                </th>
+            </tr>
+            <tr>
+                <th>SKILL:</th>
+                <th>
+                    <a th:href="@{/list/jobs(column=coreCompetency,value=${job.getCoreCompetency()})}" th:text="${job.getCoreCompetency()}" style="font-size:x-small" align="left"></a>
+                </th>
+            </tr>
+        </table>
+    </th:block>
 
-    </table>
+
 
 </div>
 
